Concerto de imagens

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <button>Resenhas</button>
 <button>Trechos</button>
 </p>
-<img  width="100" height="135" src="/Laranja Mecanica.jpg" alt="">
-<img  width="95" height="135"src="/1984-edicao-especial.jpg" alt="">
+<img  width="100" height="135" src="/LaranjaMecanica.jpg" alt="">
+<img  width="95" height="135"src="1984.jpg" alt="">
 
 <body>
   
