Alteração no nome da pag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DEV NOITE</title>
+  <title>Estante Virtual</title>
 </head>
 <h1 align="center"> Estante Virtual</h1>
 <h4 align="center"> Rômulo Famiglietti</h4>
