Correção de código

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Estante Virtual</title>
-</head>
-<h1 align="center"> Estante Virtual</h1>
-<h4 align="center"> Rômulo Famiglietti</h4>
+
+<body>
+  <h1> Estante Virtual</h1>
+  <h4> Rômulo Famiglietti</h4>
+  <p>
 <p  align="center">
 <button>Livros</button>
 <button>Resenhas</button>
