--- a/index.html
+++ b/index.html
@@ -5,23 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Estante Virtual</title>
+  <link rel="stylesheet" href="estilo.css">
+</head>
 
 <body>
   <h1> Estante Virtual</h1>
   <h4> Rômulo Famiglietti</h4>
   <p>
-<p  align="center">
-<button>Livros</button>
-<button>Resenhas</button>
-<button>Trechos</button>
-</p>
-<img  width="100" height="135" src="LaranjaMecanica.jpg" alt="">
-<img  width="95" height="135"src="1984.jpg" alt="">
-
-<body>
-  
+    <button>Livros</button>
+    <button>Resenhas</button>
+    <button>Trechos</button>
+  </p>
+  <img width="100" height="135" src="LaranjaMecanica.jpg" alt="">
+  <img width="95" height="135" src="1984.jpg" alt="">
 </body>
+
 </html>
-
-
-
