Criação das pag, resenhas, recomendações e trechos

--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Estante Virtual</title>
+  <title>Próxima Página</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
-
+<!-- Cabeçalho do Blog -->
 <body>
-  <h1> Estante Virtual</h1>
+  <h1>Próxima Página</h1>
   <h4> Rômulo Famiglietti</h4>
   <p>
-    <button>Livros</button>
-    <button>Resenhas</button>
-    <button>Trechos</button>
+    <button>
+      <a href="Recomendações.html">Recomendações</a>
+    </button>
+    <button>
+      <a href="Resenhas.html">Resenhas</a>
+    </button>
+    <button>
+      <a href=""></a>
+    </button>
   </p>
   <img width="100" height="135" src="LaranjaMecanica.jpg" alt="">
   <img width="95" height="135" src="1984.jpg" alt="">
+
+ </body>
+
+</html>
 </body>
 
 </html>
