--- a/Trechos.html
+++ b/Trechos.html
@@ -13,14 +13,15 @@
   <header>
     <h1>Próxima Página</h1>
     <h4>por Rômulo Famiglietti</h4>
-    <nav>
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="resenhas.html">Resenhas</a></li>
-        <li><a href="livros.html">Livros</a></li>
-        <li><a href="trechos.html">Trechos</a></li>
-      </ul>
-    </nav>
+        <button> 
+        <a href="index.html">Início</a>
+        </button>
+        <button>
+          <a href="resenhas.html">Resenhas</a>
+        </button>
+        <button>
+        <a href="Recomendações.html">Recomendações</a>
+      </button>
   </header>
 
   <!-- Conteúdo Principal -->
