--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="Resenhas.html">Resenhas</a>
     </button>
     <button>
-      <a href=""></a>
+      <a href="Trechos.html">Trechos</a>
     </button>
   </p>
   <img width="100" height="135" src="LaranjaMecanica.jpg" alt="">
