Altereção pag inícial

--- a/index.html
+++ b/index.html
@@ -7,10 +7,29 @@
   <title>Próxima Página</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
+
 <!-- Cabeçalho do Blog -->
 <body>
-  <h1>Próxima Página</h1>
-  <h4> Rômulo Famiglietti</h4>
+  <!-- Cabeçalho do Blog -->
+  <header>
+    <div id="title">
+      <h1>Próxima</h1>
+      <h1>Página</h1>
+    </div>
+
+    <ul>
+       <a href="index.html"><li>Início</li></a>
+       <a href="Resenhas.html"><li>Resenhas</li></a>
+       <a href="Trechos.html"><li>Trechos</li></a>
+       <a href="Recomendações.html"><li>Recomendações</li></a>
+    </ul>
+  </header>
+
+  <Main>
+    <aside>
+      
+    </aside>
+  </Main>
   <p>
     <button>
       <a href="Recomendações.html">Recomendações</a>
