--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="estilo.css">
 </head>
 <!-- Cabeçalho do Blog -->
-<body>
+<body class="pagprincipal">
   <h1>Próxima Página</h1>
   <h4> Rômulo Famiglietti</h4>
   <p>
