--- a/index.html
+++ b/index.html
@@ -9,6 +9,40 @@
 </head>
 
 <!-- Cabeçalho do Blog -->
+<header>
+  <div id="title">
+    <h1>Próxima</h1>
+    <h1>Página</h1>
+  </div>
+
+  <ul>
+     <a href="index.html"><li>Início</li></a>
+     <a href="Resenhas.html"><li>Resenhas</li></a>
+     <a href="Trechos.html"><li>Trechos</li></a>
+     <a href="Recomendações.html"><li>Recomendações</li></a>
+  </ul>
+</header>
+
+<Main>
+  <aside>
+    <h2>Inscreva-se agora</h2>
+    <h2>Na Próxima Página</h2>
+    <p>
+
+    </p>
+    <form>
+      <input type="text" placeholder="Nome">
+      <input type="email" placeholder="E-mail">
+      <input type="submit" value="Enviar >">
+    </form>
+  </aside>
+   
+   <article>
+
+   </article>
+</Main>
+<p>
+
 <body>
   <h1>Próxima Página</h1>
   <h4> Rômulo Famiglietti</h4>
