--- a/index.html
+++ b/index.html
@@ -5,31 +5,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Próxima Página</title>
-  <link rel="stylesheet" href="estilo.css">
+  <link rel="stylesheet" href="/Css/estilo.css">
 </head>
 
 <!-- Cabeçalho do Blog -->
-<header>
-  <div id="title">
-    <h1>Próxima</h1>
-    <h1>Página</h1>
-  </div>
+<body>
+  <header>
+    <div id="title">
+      <h1>Próxima</h1>
+      <h1>Página</h1>
+    </div>
 
-  <ul>
+    <ul>
      <a href="index.html"><li>Início</li></a>
-     <a href="Resenhas.html"><li>Resenhas</li></a>
-     <a href="Trechos.html"><li>Trechos</li></a>
-     <a href="Recomendações.html"><li>Recomendações</li></a>
-  </ul>
-</header>
+     <a href="#"><li>Resenhas</li></a>
+     <a href="#"><li>Trechos</li></a>
+     <a href="#"><li>Recomendações</li></a>
+    </ul>
+  </header>
 
 <Main>
   <aside>
     <h2>Inscreva-se agora</h2>
     <h2>Na Próxima Página</h2>
-    <p>
 
-    </p>
     <form>
       <input type="text" placeholder="Nome">
       <input type="email" placeholder="E-mail">
@@ -43,7 +42,7 @@
 </Main>
 <p>
 
-<body>
+
   <h1>Próxima Página</h1>
   <h4> Rômulo Famiglietti</h4>
   <p>
