--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
 
 <!-- Cabeçalho do Blog -->
 <body>
+  <header>
+    <div id="title">
+      <h1>Próxima</h1>
+      <h1>Página</h1>
+    </div>
+
+    <ul>
+       <a href="index.html"><li>Início</li></a>
+       <a href="Resenhas.html"><li>Resenhas</li></a>
+       <a href="Trechos.html"><li>Trechos</li></a>
+       <a href="Recomendações.html"><li>Recomendações</li></a>
+    </ul>
+  </header>
+
+  <Main>
+    <aside>
+      
+    </aside>
+  </Main>
+  <p>
   <h1>Próxima Página</h1>
   <h4> Rômulo Famiglietti</h4>
   <p>
