--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Próxima Página</title>
-  <link rel="stylesheet" href="/Css/estilo.css">
+  <link rel="stylesheet" href="/style/estilo.css">
 </head>
 
 <!-- Cabeçalho do Blog -->
+
 <body>
   <header>
     <div id="title">
@@ -17,65 +18,31 @@
     </div>
 
     <ul>
-<<<<<<< HEAD
-       <a href="index.html"><li>Início</li></a>
-       <a href="Resenhas.html"><li>Resenhas</li></a>
-       <a href="Trechos.html"><li>Trechos</li></a>
-       <a href="Recomendações.html"><li>Recomendações</li></a>
+      <a href="index.html"><li>Início</li></a>
+      <a href="/screens/Resenhas.html"><li>Resenhas</li></a>
+      <a href="/screens/Trechos.html"><li>Trechos</li></a>
+      <a href="/screens/Recomendações.html"><li>Recomendações</li></a>
+      <a href="/screens/Entrar.html" id="inscreva-se-btn"><li>Já tem conta?</li></a>
     </ul>
   </header>
-
+ 
   <Main>
     <aside>
-      
+      <h2><span>Inscreva-se agora</span></h2>
+      <h2>Na Próxima Página</h2>
+
+      <form>
+        <input type="text" placeholder="Nome">
+        <input type="email" placeholder="E-mail">
+        <input type="submit" value="Enviar >">
+      </form>
     </aside>
+
+    <article>
+      <img src="/Img/logo2.png" alt="logo">
+
+    </article>
   </Main>
-  <p>
-     <a href="index.html"><li>Início</li></a>
-     <a href="#"><li>Resenhas</li></a>
-     <a href="#"><li>Trechos</li></a>
-     <a href="#"><li>Recomendações</li></a>
-    </ul>
-  </header>
 
-<Main>
-  <aside>
-    <h2>Inscreva-se agora</h2>
-    <h2>Na Próxima Página</h2>
-
-    <form>
-      <input type="text" placeholder="Nome">
-      <input type="email" placeholder="E-mail">
-      <input type="submit" value="Enviar >">
-    </form>
-  </aside>
-   
-   <article>
-
-   </article>
-</Main>
-<p>
-  <h1>Próxima Página</h1>
-  <h4> Rômulo Famiglietti</h4>
-  <p>
-    <button>
-      <a href="Recomendações.html">Recomendações</a>
-    </button>
-    <button>
-      <a href="Resenhas.html">Resenhas</a>
-    </button>
-    <button>
-      <a href="Trechos.html">Trechos5
-      
-      </a>
-    </button>
-  </p>
-  <img width="100" height="135" src="/Img/LaranjaMecanica.jpg" alt="">
-  <img width="95" height="135" src="/Img/LaranjaMecanica.jpg" alt="">
-
- </body>
-
-</html>
 </body>
-
 </html>
