--- a/screens/Recomendações.html
+++ b/screens/Recomendações.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recomendações - Próxima Página</title>
-  <link rel="stylesheet" href="estilo.css">
+  <link rel="stylesheet" href="/style/estilo.css">
 </head>
 
 <body>
   <!-- Cabeçalho do Blog -->
   <header>
-    <h1>Próxima Página</h1>
-    <h4>por Rômulo Famiglietti</h4>
-        <button> 
-        <a href="index.html">Início</a>
-        </button>
-        <button>
-          <a href="resenhas.html">Resenhas</a>
-        </button>
-        <button>
-        <a href="trechos.html">Trechos</a>
-      </button>
+    <div id="title">
+      <h1>Próxima</h1>
+      <h1>Página</h1>
+    </div>
+
+    <ul>
+      <a href="index.html"><li>Início</li></a>
+      <a href="/screens/Resenhas.html"><li>Resenhas</li></a>
+      <a href="/screens/Trechos.html"><li>Trechos</li></a>
+      <a href="/screens/Recomendações.html"><li>Recomendações</li></a>
+      <a href="/screens/Entrar.html" id="inscreva-se-btn"><li>Já tem conta?</li></a>
+    </ul>
   </header>
+
+</body>
+</html>
