--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="/screens/Entrar.html" id="inscreva-se-btn"><li>Já tem conta?</li></a>
     </ul>
   </header>
- 
+ <!-- Corpo -->
   <Main>
     <aside>
       <h2><span>Inscreva-se agora</span></h2>
