--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Próxima Página</title>
-  <link rel="stylesheet" href="/style/estilo.css">
+  <link rel="stylesheet" href="style/estilo.css">
 </head>
 
 <!-- Cabeçalho do Blog -->
