apaguei todas as barras

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <ul>
       <a href="index.html"><li>Início</li></a>
       <a href="#"><li>Livros</li></a>
-      <a href="/screens/Resenhas.html"><li>Resenhas</li></a>
-      <a href="/screens/Trechos.html"><li>Trechos</li></a>
-      <a href="/screens/Recomendações.html"><li>Recomendações</li></a>
-      <a href="/screens/Entrar.html" id="inscreva-se-btn"><li>Já tem conta?</li></a>
+      <a href="screens/Resenhas.html"><li>Resenhas</li></a>
+      <a href="screens/Trechos.html"><li>Trechos</li></a>
+      <a href="screens/Recomendações.html"><li>Recomendações</li></a>
+      <a href="screens/Entrar.html" id="inscreva-se-btn"><li>Já tem conta?</li></a>
     </ul>
   </header>
  <!-- Corpo -->
@@ -39,7 +39,7 @@
     </aside>
 
     <article>
-      <img src="/Img/logo2.png" alt="logo">
+      <img src="Img/logo2.png" alt="logo">
 
     </article>
   </Main>
