alteração das barras

--- a/screens/Trechos.html
+++ b/screens/Trechos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trechos - Próxima Página</title>
-  <link rel="stylesheet" href="/style/estilo.css">
+  <link rel="stylesheet" href="style/estilo.css">
 </head>
 
 <body>
@@ -19,9 +19,9 @@
   
       <ul>
         <a href="index.html"><li>Início</li></a>
-        <a href="/screens/Resenhas.html"><li>Resenhas</li></a>
-        <a href="/screens/Trechos.html"><li>Trechos</li></a>
-        <a href="/screens/Recomendações.html"><li>Recomendações</li></a>
+        <a href="screens/Resenhas.html"><li>Resenhas</li></a>
+        <a href="screens/Trechos.html"><li>Trechos</li></a>
+        <a href="screens/Recomendações.html"><li>Recomendações</li></a>
       </ul>
     </header>
 
