--- a/screens/Entrar.html
+++ b/screens/Entrar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entrar</title>
-    <link rel="stylesheet" href="/style/estilo.css">
+    <link rel="stylesheet" href="style/estilo.css">
 </head>
 <body>
     <header>
