--- a/screens/Trechos.html
+++ b/screens/Trechos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trechos - Próxima Página</title>
-  <link rel="stylesheet" href="style/estilo.css">
+  <link rel="stylesheet" href="/screens/Trechos.html">
 </head>
 
 <body>
