--- a/screens/Resenhas.html
+++ b/screens/Resenhas.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style/estilo.css">
 </head>
 
-<body>
+<body id="home">
   <!-- Cabeçalho do Blog -->
   <header>
     <div id="title">
