--- a/screens/Resenhas.html
+++ b/screens/Resenhas.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resenhas - Próxima Página</title>
-  <link rel="stylesheet" href="style/estilo.css">
+  <link rel="stylesheet" href="/style/estilo.css">
 </head>
 
-<body id="home">
+<body class="rese">
   <!-- Cabeçalho do Blog -->
   <header>
     <div id="title">
