--- a/screens/Trechos.html
+++ b/screens/Trechos.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/screens/Trechos.html">
 </head>
 
-<body>
+<body class="home">
   <!-- Cabeçalho do Blog -->
   <header>
       <div id="title">
